--- a/SuperSimpleDevLessons/08-Rock-paper-scissors.html
+++ b/SuperSimpleDevLessons/08-Rock-paper-scissors.html
@@ -5,7 +5,7 @@
 
 <head>
 
-<title>8tema</title>
+<title>Rock paper scissors game</title>
 
 </head>
 
@@ -17,9 +17,20 @@
 <button onclick="playgame('rock', computerMove());">Rock</button>
 <button onclick="playgame('paper', computerMove());">Paper</button>
 <button onclick="playgame('scissors', computerMove());">Scissors</button>
-<button>Reset score</button>
+<button onclick="
+score.wins = 0;
+score.losses = 0;
+score.ties = 0;
+localStorage.removeItem('score')">Reset score</button>
 
 <Script>
+
+  let score = JSON.parse(localStorage.getItem('score')) || {
+    wins: 0,
+    losses: 0,
+    ties: 0
+  };
+
   function computerMove(){
     const randomNumber=Math.random();
 
@@ -42,12 +53,15 @@
 
       if(computerMove==='rock'){
       result='Draw';
+      score.draws +=1;
     }
       else if(computerMove==='paper'){
         result='You lose!';
+        score.losses +=1;
       }
       else if(computerMove==='scissors'){
         result='You win!';
+        score.wins +=1;
       }
     }
 
@@ -55,12 +69,15 @@
 
       if(computerMove==='rock'){
       result='You win!';
+      score.wins +=1;
     }
       else if(computerMove==='paper'){
         result='Draw';
+        score.draws += 1;
       }
       else if(computerMove==='scissors'){
         result='You lose!';
+        score.losses += 1;
       }
     }
 
@@ -68,16 +85,22 @@
 
       if(computerMove==='rock'){
       result='You lose!';
+      score.losses += 1;
     }
       else if(computerMove==='paper'){
         result='You win!';
+        score.wins +=1;
       }
       else if(computerMove==='scissors'){
         result='Draw';
+        score.draws +=1;
       }
     }
 
-    alert(`You picked ${playerMove}, computer picked ${computerMove}, the result is: ${result}`);
+    localStorage.setItem('score', JSON.stringify(score));
+
+    alert(`You picked ${playerMove}, computer picked ${computerMove}, the result is: ${result}.
+    Wins:${score.wins}, Losses:${score.losses}, Draws: ${score.draws}.`);
 
 
   }
